# skin-lesion-classifier

./: .dockerignore  .gitattributes  .gitignore  LICENSE  MODEL_CARD.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
backend/: Dockerfile  main.py  requirements.txt  schemas.py
configs/: efficientnet_b0.yaml  efficientnet_b0_ce.yaml  efficientnet_b0_focal.yaml  efficientnet_b0_wce.yaml  resnet18.yaml  resnet18_ce.yaml  resnet18_focal.yaml  resnet18_wce.yaml  vit_tiny.yaml  vit_tiny_ce.yaml  vit_tiny_focal.yaml  vit_tiny_wce.yaml
docs/: disclaimer.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: results_summary.json
frontend/src/: App.vue  env.d.ts  style.css
frontend/src/views/: ClassifierView.vue  ResultsView.vue
notebooks/: 01_eda.ipynb  02_results_analysis.ipynb
results/metrics/: efficientnet_b0-ce-seed42_test.json  efficientnet_b0-focal-seed42_test.json  efficientnet_b0-wce-seed42_test.json  resnet18-ce-seed42_test.json  resnet18-focal-seed42_test.json  resnet18-wce-seed42_test.json  vit_tiny-ce-seed42_test.json  vit_tiny-focal-seed42_test.json  vit_tiny-wce-seed42_test.json
scripts/: bake_results.py  build_dashboard_data.py  download_data.py  grad_cam_gallery.py  inspect_runs.py  make_og_image.py  plot_comparison.py  profile_models.py  run_experiment.py
src/: evaluate.py  inference.py  train.py
src/data/: __init__.py  dataset.py  split.py  transforms.py
src/losses/: __init__.py  focal.py  weighted_ce.py
src/models/: __init__.py  efficientnet.py  resnet.py  vit.py
tests/: conftest.py  test_configs.py  test_dataset.py  test_inference.py  test_losses.py  test_models.py
