[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skin-lesion-classifier"
version = "0.1.0"
description = "Multi-class skin lesion classification on HAM10000: CNN vs Vision Transformer comparison under class imbalance, with experiment tracking, testing, and end-to-end deployment."
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Huan-Chi Liu", email = "liou.aquarius@gmail.com" },
]
dependencies = [
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "timm>=1.0.27",
    "scikit-learn>=1.9.0",
    "pandas>=2.3.3",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "grad-cam>=1.5.5",  # PyPI package name; imported as `pytorch_grad_cam`
    "mlflow>=3.13.0",
    # Serving (backend runs on uv + FastAPI in dev; Docker uses the slim
    # backend/requirements.txt with CPU-only torch for a smaller image).
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "python-multipart>=0.0.32",
]

[project.optional-dependencies]
# httpx is required by FastAPI's TestClient (tests/test_inference.py).
dev = ["pytest>=9.0.3", "pytest-cov>=7.1.0", "ruff>=0.15.16", "httpx>=0.28.1"]
data = [
    "kaggle>=2.2.1",
]
# Jupyter runtime for the EDA / experiment notebooks.
notebook = [
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
]

# Make `src` (and src.models / src.data / src.losses) importable and
# measurable by --cov=src after `pip install -e .` / `uv sync`.
[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
